--- a/templates/graph.html
+++ b/templates/graph.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="{{url_for('static', filename='dygraph.css')}}">
 	</head>
 	<body>
-		<div id="div_g" style="width:100%px; height:600px;"></div>
+		<div id="div_g" style="width:800px; height:600px;"></div>
 		<script src="{{url_for('static', filename='jquery-3.2.1.min.js')}}"></script>
 		<script src="{{url_for('static', filename='dygraph.min.js')}}"></script>
 		<script>
