Add URL paramater to control how many days of data get graphed
This defaults to 7, but can be changed by adding ?days=14 or something.

--- a/templates/graph.html
+++ b/templates/graph.html
@@ -30,7 +30,7 @@
 				}
 
 				function fetchData() {
-					fetch({{url_for('api_sensor', sensor_name=sensor_name)|tojson|safe}}).then(function (response) {
+					fetch({{url_for('api_sensor', sensor_name=sensor_name, days=days_to_fetch)|tojson|safe}}).then(function (response) {
 						var jsonData = response.json().then(function (json) {
 							g.updateOptions({file: translateData(json)});
 						});
